First prototype of an rdf loader using rdflib.js, including individuals

--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,7 @@
 					<p class="propDetails">Individuals: <span id="individuals"></span></p>
 					<p class="propDetails">Description: <span id="nodeDescription"></span></p>
 					<p class="propDetails">Comment: <span id="nodeComment"></span></p>
+					<p class="propDetails">Id: <span id="classId"></span></p>
 				</div>
 				<div id="propertySelectionInformation" class="hidden">
 					<p class="propDetails">Name: <span id="propname"></span></p>
@@ -92,6 +93,7 @@
 					<p class="propDetails">Charac.: <span id="propAttributes"></span></p>
 					<p class="propDetails">Description: <span id="propDescription"></span></p>
 					<p class="propDetails">Comment: <span id="propComment"></span></p>
+					<p class="propDetails">Id: <span id="propId"></span></p>
 				</div>
 				<div id="noSelectionInformation">
 					<p><span>Select an element in the visualization.</span></p>
@@ -125,6 +127,7 @@
 			</li>
 			<li id="filterOption"><a href="#">Filter</a>
 				<ul class="toolTipMenu filter">
+				    <li class="toggleOption" id="individualsFilteringOption"></li>
 					<li class="toggleOption" id="datatypeFilteringOption"></li>
 					<li class="toggleOption" id="objectPropertyFilteringOption"></li>
 					<li class="toggleOption" id="subclassFilteringOption"></li>
