Added remove button for classes

--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,7 @@
 					<p class="propDetails">Description: <span id="nodeDescription"></span></p>
 					<p class="propDetails">Comment: <span id="nodeComment"></span></p>
 					<p class="propDetails">Id: <span id="classId"></span></p>
+					<p class="propDetails"><button id="filterClassButton">Remove</button> </p> 
 				</div>
 				<div id="propertySelectionInformation" class="hidden">
 					<p class="propDetails">Name: <span id="propname"></span></p>
