Moved save load menu to separate file

--- a/src/index.html
+++ b/src/index.html
@@ -147,6 +147,11 @@
 				<ul class="toolTipMenu export">
 					<li><a href="#" download id="exportJson">Export as JSON</a></li>
 					<li><a href="#" download id="exportSvg">Export as SVG</a></li>
+					
+				</ul>
+			</li>
+			<li id="saveMenu"><a href="#">Save/Load</a>
+				<ul class="toolTipMenu saveMenu">
 					<li><a href="#"  id="savePositions">Save node positions</a></li>
 					<li><a href="#"  id="loadPositions">Load node positions</a></li>
 				</ul>
